--- a/index.html
+++ b/index.html
@@ -13,6 +13,106 @@
     </head>
 
     <body>
+                <!-- container principale -->
+        <div class="main-container border">
+
+                <!-- side menù bar  -->
+            <div class="side-nav border"></div>
+
+                <!-- main-central-content -->
+
+            <div class="main-content border">
+                <div class="upgrade-bar border"></div>
+
+                <!-- menu-selection-artist -->
+
+                <div class="music-container border">
+                    <div class="selection-container border container-max-width">
+                        <div>
+                            <ul class="menu-list">
+                                <li>aaa</li>
+                                <li>aaa</li>
+                                <li>aaa</li>
+                                <li>aaa</li>
+                                <li>aaa</li>
+                                <li>aaa</li>
+                            </ul>
+                        </div>                  
+                    </div>
+
+                    <!-- recently played -->
+
+                    <div class="recent-played border container-max-width">
+                        <h2>Recently Played</h2>
+                        <div class="row-l">
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- created for -->
+                
+                    <div class="for-you-music border container-max-width">
+                        <h2>Creato per John Doe</h2>
+                        <p>bla bla bla bla bla bla bla</p>
+
+                        <div class="row-l">
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Popular artist -->
+
+                    <div class="best-popular border container-max-width">
+                        <h2>Artisti più popolari</h2>
+                        <p>bla bla bla bla bla bla bla</p>
+
+                        <div class="row-l">
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+                            <div class="col-l">
+                                <div class="card-l"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+                <!-- play music bar -->
+
+        <div class="bottom-bar-container border">
+
+        </div>
 
     </body>
 
