--- a/index.html
+++ b/index.html
@@ -17,7 +17,50 @@
         <div class="main-container border">
 
                 <!-- side menù bar  -->
-            <div class="side-nav border"></div>
+            <div class="side-nav border">
+
+                        <!-- first menu nav part -->
+                <div class="left-main-nav" style="background-color: pink;">
+                    <div class="logo">
+                        <img src="./img/logo.svg" alt="">
+                    </div>
+                    <div class="side-nav-icon">
+                        <i class="fa-solid fa-house"></i>
+                        <span>Home</span>
+                    </div>
+                    <div class="side-nav-icon">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <span>Cerca</span>
+                    </div>
+                    <div class="side-nav-icon">
+                        <i class="fa-solid fa-book"></i>
+                        <span>La tua Libreria</span>
+                    </div>                   
+                </div>
+
+                        <!-- second-menu nav part -->
+                <div class="left-playlist-nav">
+                    <h4>PLAYLIST</h4>
+
+                    <div class="new-playlist">
+                        <i class="fa-solid fa-plus"></i>
+                        <span>Crea Playlist</span>
+                    </div>
+
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                    <div class="playlist-name">Nome Playlist</div>
+                </div>
+
+
+            </div>
 
                 <!-- main-central-content -->
 
@@ -29,13 +72,14 @@
                 <div class="music-container border">
                     <div class="selection-container border container-max-width">
                         <div>
-                            <ul class="menu-list">
-                                <li>aaa</li>
-                                <li>aaa</li>
-                                <li>aaa</li>
-                                <li>aaa</li>
-                                <li>aaa</li>
-                                <li>aaa</li>
+                            <ul class="menu-list-l">
+                                <li class="list-m">aaasdasdaa</li>
+                                <li class="list-m">aaasdasdaa</li>
+                                <li class="list-m">aaasdasdaa</li>
+                                <li class="list-m">aaasdasdaa</li>
+                                <li class="list-m">aaasdasdaa</li>
+                                <li class="list-m">aaasdasdaa</li>
+                                
                             </ul>
                         </div>                  
                     </div>
@@ -45,27 +89,27 @@
                     <div class="recent-played border container-max-width">
                         <h2>Recently Played</h2>
                         <div class="row-l">
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
                         </div>
@@ -78,10 +122,10 @@
                         <p>bla bla bla bla bla bla bla</p>
 
                         <div class="row-l">
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
                         </div>
@@ -94,10 +138,10 @@
                         <p>bla bla bla bla bla bla bla</p>
 
                         <div class="row-l">
-                            <div class="col-l">
-                                <div class="card-l"></div>
+                            <div class="col-l col-m">
+                                <div class="card-l "></div>
                             </div>
-                            <div class="col-l">
+                            <div class="col-l col-m">
                                 <div class="card-l"></div>
                             </div>
                         </div>
