--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
                     <div class="recent-played border container-max-width">
                         <h2>Recently Played</h2>
                         <div class="row-l">
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
 
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
                         </div>
@@ -122,10 +122,10 @@
                         <p>bla bla bla bla bla bla bla</p>
 
                         <div class="row-l">
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
                         </div>
@@ -138,10 +138,10 @@
                         <p>bla bla bla bla bla bla bla</p>
 
                         <div class="row-l">
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l "></div>
                             </div>
-                            <div class="col-l col-m">
+                            <div class="col-l col-m col-s">
                                 <div class="card-l"></div>
                             </div>
                         </div>
