xd-layout-ended

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
                     </div>
                     <div class="side-nav-icon">
                         <i class="fa-solid fa-house"></i>
-                        <span>Home</span>
+                        <span class="hidden-m">Home</span>
                     </div>
                     <div class="side-nav-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <span>Cerca</span>
+                        <span class="hidden-m">Cerca</span>
                     </div>
                     <div class="side-nav-icon">
                         <i class="fa-solid fa-book"></i>
-                        <span>La tua Libreria</span>
+                        <span class="hidden-m">La tua Libreria</span>
                     </div>                   
                 </div>
 
                         <!-- second-menu nav part -->
-                <div class="left-playlist-nav">
+                <div class="left-playlist-nav hidden-m">
                     <h4>PLAYLIST</h4>
 
                     <div class="new-playlist">
@@ -57,6 +57,19 @@
                     <div class="playlist-name">Nome Playlist</div>
                     <div class="playlist-name">Nome Playlist</div>
                     <div class="playlist-name">Nome Playlist</div>
+                </div>
+
+                    <!-- third menu-user nav -->
+
+                <div class="left-user-nav">
+                    <div class="border-l">
+                        <i class="fa-solid fa-circle-down"></i>
+                        <span class="hidden-m"> Installa app</span>
+                    </div>                    
+                    <div>
+                        <i class="fa-solid fa-circle-user"></i>
+                        <span class="hidden-m">John Doe</span>
+                    </div>
                 </div>
 
 
