--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <!-- third menu-user nav -->
 
                 <div class="left-user-nav">
-                    <div class="border-l">
+                    <div class="border-l border-xs">
                         <i class="fa-solid fa-circle-down"></i>
                         <span class="hidden-m"> Installa app</span>
                     </div>                    
