--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                     <div class="selection-container border container-max-width">
                         <div>
                             <ul class="menu-list-l text-menu-style">
-                                <li class="list-m">IN EVIDENZA</li>
-                                <li class="list-m">PODCAST</li>
-                                <li class="list-m">CLASSIFICHE</li>
-                                <li class="list-m">GENERI E MOOD</li>
-                                <li class="list-m">NUOVE USCITE</li>
-                                <li class="list-m">SCOPRI</li>
+                                <li class="list-m"><a href="#">IN EVIDENZA</a></li>
+                                <li class="list-m"><a href="#">PODCAST</a></li>
+                                <li class="list-m"><a href="#">CLASSIFICHE</a></li>
+                                <li class="list-m"><a href="#">GENERI E MOOD</a></li>
+                                <li class="list-m"><a href="#">NUOVE USCITE</a></li>
+                                <li class="list-m"><a href="#">SCOPRI</a></li>
                                 
                             </ul>
                         </div>                  
