button-nav-finished

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="side-nav border">
 
                         <!-- first menu nav part -->
-                <div class="left-main-nav" style="background-color: pink;">
+                <div class="left-main-nav">
                     <div class="logo">
                         <img src="./img/logo.svg" alt="">
                     </div>
@@ -81,7 +81,9 @@
                 <!-- main-central-content -->
 
             <div class="main-content border">
-                <div class="upgrade-bar border"></div>
+                <div class="upgrade-bar border">
+                    <a href="#"> <button class="btn"> EFFETTUA L'upgrade-bar</button></a>
+                </div>
 
                 <!-- menu-selection-music -->
 
@@ -210,7 +212,7 @@
 
                     <!-- Popular artist -->
 
-                    <div class="bcontainer-l border container-max-width">
+                    <div class="container-l border container-max-width">
                         <h2>Artisti più popolari</h2>
                         <p class="text-menu-style alt-menu-style">Più ascolti, più accurati saranno i suggerimenti</p>
 
