--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <!-- first menu nav part -->
                 
                 <div class="container-logo">
-                    <img  class="logo"src="./img/logo.svg" alt="">
+                    <img  class="logo hidden-m"src="./img/logo.svg" alt="Logo Spotify">
+                    <img class="small-logo small-logo-m" src="img/logo-small.svg" alt="Logo Spotify Mini" class="small-logo">
                 </div>
 
                 <div class="left-main-nav">
