--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <div class="main-content border">
                 <div class="upgrade-bar border">
-                    <a href="#"> <button class="btn"> EFFETTUA L'UPGRADE</button></a>
+                    <a href="#"> <button class="btn btn-size"> EFFETTUA L'UPGRADE</button></a>
                 </div>
 
                 <!-- menu-selection-music -->
