--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>                    
                     <div>
                         <i class="fa-solid fa-circle-user text-menu-style alt-menu-style"></i>
-                        <span class="hidden-m alt-menu-style" style="color: white">John Doe</span>
+                        <h3 class="hidden-m user-style" >John Doe</h3>
                     </div>
                 </div>
             </div>
