--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/metal_lifting.jpg" alt="">
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
+                                        <div class="bg-opacity"></div>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Heavy Metal</h4>
