--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="description" content="Spotify is a digital music service that gives you access to millions of songs.">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 
     <body>
@@ -129,8 +129,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/metal_lifting.jpg" alt="">
-                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                         <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Heavy Metal</h4>
@@ -143,6 +143,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/stranger.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Strange Things, Vol. 1 (a Netflix Original Series Soundtrack)</h4>
@@ -154,6 +156,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/aquietplace.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">A quiet place</h4>
@@ -165,6 +169,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/split.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Split</h4>
@@ -176,6 +182,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/cure.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">A cure for wellness</h4>
@@ -187,6 +195,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/sinister.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Sinister</h4>
@@ -210,6 +220,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/radar.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Release Radar</h4>                                       
@@ -220,6 +232,8 @@
                                 <div class="card-l">
                                     <div class="img-container">
                                         <img class="card-img" src="./img/mixdaily.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Daily Mix 1</h4>                                        
@@ -240,6 +254,8 @@
                                 <div class="card-l ">
                                     <div class="img-container">
                                         <img class="card-img circle-img" src="./img/youg.jpeg" alt="">
+                                        <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
                                         <h4 class="song-title">Lana Del Rey</h4>                                    
@@ -251,6 +267,8 @@
                                     <div class="card-l ">
                                         <div class="img-container">
                                             <img class="card-img circle-img" src="./img/einaudi.jpeg" alt="">
+                                            <div class="bg-opacity"></div>
+                                        <i class="fa-regular fa-circle-play img-walk"></i>
                                         </div>
                                         <div class="info-card">
                                             <h4 class="song-title">Ludovico Einaudi</h4>                                    
