fixed-opacity-circle

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 <div class="card-l ">
                                     <div class="img-container">
                                         <img class="card-img circle-img" src="./img/youg.jpeg" alt="">
-                                        <div class="bg-opacity"></div>
+                                        <div class="bg-opacity circle-opacity"></div>
                                         <i class="fa-regular fa-circle-play img-walk"></i>
                                     </div>
                                     <div class="info-card">
@@ -267,8 +267,8 @@
                                     <div class="card-l ">
                                         <div class="img-container">
                                             <img class="card-img circle-img" src="./img/einaudi.jpeg" alt="">
-                                            <div class="bg-opacity"></div>
-                                        <i class="fa-regular fa-circle-play img-walk"></i>
+                                            <div class="bg-opacity circle-opacity"></div>
+                                            <i class="fa-regular fa-circle-play img-walk"></i>
                                         </div>
                                         <div class="info-card">
                                             <h4 class="song-title">Ludovico Einaudi</h4>                                    
