hover-line-greenfixed

--- a/index.html
+++ b/index.html
@@ -108,12 +108,30 @@
                     <div class="selection-container border container-max-width">
                         <div>
                             <ul class="menu-list-l text-menu-style">
-                                <li class="list-m"><a href="#">IN EVIDENZA</a></li>
-                                <li class="list-m"><a href="#">PODCAST</a></li>
-                                <li class="list-m"><a href="#">CLASSIFICHE</a></li>
-                                <li class="list-m"><a href="#">GENERI E MOOD</a></li>
-                                <li class="list-m"><a href="#">NUOVE USCITE</a></li>
-                                <li class="list-m"><a href="#">SCOPRI</a></li>
+                                <li class="list-m">
+                                    <a href="#">IN EVIDENZA</a>
+                                    <div class="green-line"></div>
+                                </li>
+                                <li class="list-m">
+                                    <a href="#">PODCAST</a>
+                                    <div class="green-line"></div>
+                                </li>
+                                <li class="list-m">
+                                    <a href="#">CLASSIFICHE</a>
+                                    <div class="green-line"></div>
+                                </li>
+                                <li class="list-m">
+                                    <a href="#">GENERI E MOOD</a>
+                                    <div class="green-line"></div>
+                                </li>
+                                <li class="list-m">
+                                    <a href="#">NUOVE USCITE</a>
+                                    <div class="green-line"></div>
+                                </li>
+                                <li class="list-m">
+                                    <a href="#">SCOPRI</a>
+                                    <div class="green-line"></div>
+                                </li>
                                 
                             </ul>
                         </div>                  
