player-bar-button

--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
                             <i class="fa-solid fa-shuffle"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-shuffle"></i>
+                            <i class="fa-solid fa-backward-step"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-shuffle"></i>
+                            <i class="fa-regular fa-circle-play play-button-size"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-shuffle"></i>
+                            <i class="fa-solid fa-forward-step"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-shuffle"></i>
+                            <i class="fa-solid fa-rotate-right"></i>
                         </div>                       
                     </div>
                 </div>
