footer-before-fix

--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
                     </div>
 
                     <div class="col">
-                        <div class="bottom-icon-container">
-                            <i class="fa-regular fa-heart text-menu-style bottom-icon"></i>
-                            <i class="fa-regular fa-folder text-menu-style bottom-icon"></i>
+                        <div class="bottom-icon-container bottom-icon-container-s">
+                            <i class="fa-regular fa-heart text-menu-style bottom-icon bottom-icon-s"></i>
+                            <i class="fa-regular fa-folder text-menu-style bottom-icon bottom-icon-s"></i>
 
                         </div>
                     </div>
