--- a/index.html
+++ b/index.html
@@ -306,9 +306,11 @@
 
         <div class="bottom-bar-container border">
 
+                    <!-- left-side-player -->
+
             <div class="left-side-player">
 
-                <div class="row-l row-bottom">
+                <div class="row-l bar-nowrap row-bottom">
                     <div class="col">
                         <div class="">
                             <div class="bottom-img-container">
@@ -335,25 +337,28 @@
                 
             </div>
 
+
+                <!-- mid player -->
+
             <div class="mid-player">
 
 
-                <div class="row-l bottom-mid-flex ">
+                <div class="row-l bar-nowrap bottom-mid-flex ">
                     <div class=" col player-bar ">
                         <div class="player">
-                            <i class="fa-solid fa-shuffle"></i>
+                            <i class="fa-solid fa-shuffle no-play-button"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-backward-step"></i>
+                            <i class="fa-solid fa-backward-step no-play-button"></i>
                         </div>
                         <div class="player">
                             <i class="fa-regular fa-circle-play play-button-size"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-forward-step"></i>
+                            <i class="fa-solid fa-forward-step no-play-button"></i>
                         </div>
                         <div class="player">
-                            <i class="fa-solid fa-rotate-right"></i>
+                            <i class="fa-solid fa-rotate-right no-play-button"></i>
                         </div>                       
                     </div>
                 
@@ -367,8 +372,11 @@
 
             </div>
 
+
+                    <!-- right-side-player -->
+
             <div class="right-side-player">
-                <div class="row-l">
+                <div class="row-l bar-nowrap">
 
                     <div class="right-player">
                         <div class="border-box bottom-icon-container-right">
