need-fix-volume-bar

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <div class="row-l bar-nowrap row-bottom">
                     <div class="col">
                         <div class="">
-                            <div class="bottom-img-container">
+                            <div class="bottom-img-container bottom-img-m">
                                 <img class="bottom-img" src="./img/sinister.jpeg" alt="">
                             </div>
                         </div>
