fixed-bottom-bar

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 
                 <div class="row-l bar-nowrap bottom-mid-flex ">
-                    <div class=" col player-bar ">
+                    <div class=" col player-bar player-bar-s ">
                         <div class="player">
                             <i class="fa-solid fa-shuffle no-play-button"></i>
                         </div>
