finished-hover-bottom

--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
 
 
                 <div class="row-l bar-nowrap bottom-mid-flex ">
-                    <div class=" col player-bar player-bar-s ">
+                    <div class=" col player-bar player-bar-s">
                         <div class="player">
                             <i class="fa-solid fa-shuffle no-play-button"></i>
                         </div>
                         <div class="player">
                             <i class="fa-solid fa-backward-step no-play-button"></i>
                         </div>
-                        <div class="player">
+                        <div class="player hover-play">
                             <i class="fa-regular fa-circle-play play-button-size"></i>
                         </div>
                         <div class="player">
@@ -365,7 +365,12 @@
 
                     <div class="progress-bar">
                         <div class="timer starting-timer"> <span>0.25</span></div>
-                        <div class="progress-bar-line"> </div>
+                        <div class="progress-bar-line">
+                            <div class="progress-bar-line-hover">
+                                <div class="dot-end"></div>
+                            </div>                       
+                        </div>
+
                         <div class="timer total-timer"> <span>4.35</span></div>
                     </div>
                 </div>
@@ -388,7 +393,11 @@
                         <div class="border-box bottom-icon-container-right">
                             <i class="fa-solid fa-volume-high"></i>
                         </div>
-                        <div class="volume-line"></div>
+                        <div class="volume-line">
+                            <div class="volume-line-hover">
+                                <div class="dot-end"></div>
+                            </div>
+                        </div>
                     </div>   
                 </div>
             </div>
