fixed-padding-nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
             <!-- side menù bar  -->
 
-            <div class="side-nav border">
+            <div class="side-nav side-nav-xs border">
 
                 <!-- first menu nav part -->
                 
