--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="left-main-nav">
                     <ul class="nav-list">
-                        <li>
+                        <li class="border-left-green">
                             <div class="item-list icon text-menu-style alt-menu-style">
                                 <img src="img/home.svg" alt="" class="icon-nav">
                                 <a href="#"class="hidden-m">Home</a>
